@@ -1,5 +1,8 @@
 Changes in version 1.0.1
 
+
+o FIX: bug in `EGA.estimate` when using the TMFG network method. The resulting EGA plot did not have the correct node names.
+
 o FIX: bug in `UVA` when trying to use sum score (`reduce.method = "sum"`) in automated procedure
 
 o ADD: measurement `invariance` function for testing differences in network loadings between groups
